Perkin-UAT/force-app/main/default/objects/SMAX_PS_EntitlementDate__c/SMAX_PS_EntitlementDate__c.object-meta.xml
<CustomObject>
    <label>Entitlement Date</label>
    <nameField>
        <displayFormat>ED-{0000000000}</displayFormat>
        <label>Entitlement Date Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entitlement Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>