Perkin-UAT/force-app/main/default/objects/SMAX_PS_EntitlementDate__c/fields/SMAX_PS_ContractItem__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ContractItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Item</label>
    <referenceTo>SVMXC__Service_Contract__c</referenceTo>
    <relationshipLabel>Entitlement Dates</relationshipLabel>
    <relationshipName>Entitlement_Dates</relationshipName>
    <type>Lookup</type>
</CustomField>