Perkin-UAT/force-app/main/default/objects/SMAX_PS_EntitlementDate__c/fields/SMAX_PS_CoveredProduct__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_CoveredProduct__c</fullName>
    <label>Covered Product</label>
    <referenceTo>SVMXC__Service_Contract_Products__c</referenceTo>
    <relationshipLabel>Entitlement Dates</relationshipLabel>
    <relationshipName>Entitlement_Dates</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>