Perkin-UAT/force-app/main/default/objects/SMAX_PS_EntitlementDate__c/fields/SMAX_PS_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Entitlement__c</fullName>
    <label>Contract Entitlement</label>
    <referenceTo>SVMXC__Service_Contract_Services__c</referenceTo>
    <relationshipLabel>Entitlement Dates</relationshipLabel>
    <relationshipName>Entitlement_Dates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>