Perkin-UAT/force-app/main/default/objects/SMAX_PS_EntitlementDate__c/fields/SMAX_PS_EntitlementCondition__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_EntitlementCondition__c</fullName>
    <label>Entitlement Condition</label>
    <length>4</length>
    <type>Text</type>
</CustomField>