Perkin-UAT/force-app/main/default/objects/SMAX_PS_EntitlementDate__c/fields/SMAX_PS_External_ID__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Entitlement Date Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>