Perkin-UAT/force-app/main/default/objects/SMAX_PS_EntitlementDate__c/fields/SMAX_PS_Is_Open__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Is_Open__c</fullName>
    <formula>AND(
  ISBLANK( SMAX_PS_ServiceOrderNumber__c ),
  ISBLANK( SMAX_PS_SAP_Notification_ID__c ),
  ISBLANK( SMAX_PS_WorkOrder__c ) 
)</formula>
    <label>Is Open</label>
    <type>Checkbox</type>
</CustomField>