Perkin-UAT/force-app/main/default/objects/SMAX_PS_EntitlementDate__c/fields/SMAX_PS_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Sales_Org__c</fullName>
    <formula>SMAX_PS_ContractItem__r.SVMX_PS_Parent_Contract__r.SMAX_PS_SalesOrg__c</formula>
    <label>Sales Org</label>
    <type>Text</type>
</CustomField>