Perkin-UAT/force-app/main/default/objects/SMAX_PS_EntitlementDate__c/fields/SMAX_PS_SAP_Notification_ID__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_SAP_Notification_ID__c</fullName>
    <description>The SAP Notification ID this Entitlement Date was consumed by.</description>
    <inlineHelpText>The SAP Notification ID this Entitlement Date was consumed by.</inlineHelpText>
    <label>SAP Notification ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>