Perkin-UAT/force-app/main/default/objects/SMAX_PS_EntitlementDate__c/fields/SMAX_PS_ServiceOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ServiceOrderNumber__c</fullName>
    <label>Service Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>