Perkin-UAT/force-app/main/default/objects/SMAX_PS_EntitlementDate__c/listViews/Pending_Entitlement_Dates.listView-meta.xml
<ListView>
    <fullName>Pending_Entitlement_Dates</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_ContractItem__c</columns>
    <columns>SMAX_PS_CoveredProduct__c</columns>
    <columns>SMAX_PS_EntitlementCondition__c</columns>
    <columns>SMAX_PS_PlannedDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SMAX_PS_PlannedDate__c</field>
        <operation>equals</operation>
        <value>NEXT_90_DAYS</value>
    </filters>
    <filters>
        <field>SMAX_PS_ServiceOrderNumber__c</field>
        <operation>equals</operation>
    </filters>
    <label>Pending Entitlement Dates</label>
    <language>en_US</language>
</ListView>